# market-simulation

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SKILL.md  install.sh  pyproject.toml  setup.py
examples/: coffee_shop.py
market_simulation/: SKILL.md  __init__.py  _cli.py  analyze.py  personas.py
src/: analyze.py  personas.py
