[project]
name = "market-simulation"
version = "0.1.0"
description = "AI market simulation using Nemotron Korean personas via Claude Code Agents"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
