[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-simulation"
version = "0.9.3"
description = "AI market research simulation using NVIDIA Nemotron personas and Claude Code Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["market research", "simulation", "personas", "claude", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/lumatic2/market-simulation"
Repository = "https://github.com/lumatic2/market-simulation"

[project.scripts]
market-simulation = "market_simulation._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["market_simulation*"]

[tool.setuptools.package-data]
market_simulation = ["SKILL.md"]
